correcting centering of scaled slides - now done correctly: the 50/50% origin is the original scale=1 slide so scaling will inherently shift the origin as we also adjust the width/height and those two are top/left based, all the time, so we need to translate the scaled (and now also *bigger-as-in-original-pixels*) slide to center it properly.

--- a/css/reveal.css
+++ b/css/reveal.css
@@ -84,18 +84,24 @@ body
 }
 
 .slides-wrapper {
-    transform-origin: 50% 50% 0px;
+    transform-origin: 50% 50%;
 }
 
 .slides-wrapper .slides {
-    transform-origin: 50% 50% 0px;
+    transform-origin: 50% 50%;
 }
 
 .slides-wrapper .slides > section {
-    transform-origin: 0px 0px 0px;
+    -webkit-transform-origin: 50% 50%;
+       -moz-transform-origin: 50% 50%;
+        -ms-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
 }
 .slides-wrapper .slides > section > section {
-    transform-origin: 0px 0px 0px;
+    -webkit-transform-origin: 50% 50%;
+       -moz-transform-origin: 50% 50%;
+        -ms-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
 }
 
 /*********************************************
